--- a/index.html
+++ b/index.html
@@ -22,6 +22,33 @@
   <th scope='col'><div align='center'>200mu</div></th>
   <th scope='col'><div align='center'>800mu</div></th>
   <th scope='col'><div align='center'>100pi</div></th>
+ </tr>
+ <tr>
+ <td>0c307c0beea2f3649615cf98d92f76882a7985dc</td>
+ <td> Removes docker entry point </td>
+  <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/log1'>42.76</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass2"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink2'>0c307c0beea2f3649615cf98d92f76882a7985dcText2</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass3"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink3'>0c307c0beea2f3649615cf98d92f76882a7985dcText3</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass4"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink4'>0c307c0beea2f3649615cf98d92f76882a7985dcText4</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass5"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink5'>0c307c0beea2f3649615cf98d92f76882a7985dcText5</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass6"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink6'>0c307c0beea2f3649615cf98d92f76882a7985dcText6</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass7"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink7'>0c307c0beea2f3649615cf98d92f76882a7985dcText7</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass8"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink8'>0c307c0beea2f3649615cf98d92f76882a7985dcText8</td>
+ </tr>
+ 
+
+            <tr>
+            <th scope='col'><div align='center'>Commit ID</div></th>
+            <th scope='col'><div align='center'>Description</div></th>
+
+  <th scope='col'><div align='center'>Build_Test</div></th>
+  <th scope='col'><div align='center'>Execution_Test</div></th>
+  <th scope='col'><div align='center'>10e</div></th>
+  <th scope='col'><div align='center'>100e</div></th>
+  <th scope='col'><div align='center'>500e</div></th>
+  <th scope='col'><div align='center'>200mu</div></th>
+  <th scope='col'><div align='center'>800mu</div></th>
+  <th scope='col'><div align='center'>100pi</div></th>
  </tr> 
  <tr>
  <td>0</td>
@@ -304,33 +331,6 @@
   <td bgcolor="#FF0000"><a href='1f0236f3c9506d4acb9a1c3061ac7f6e570ef0d8/6/index.html'>Failed</td>
   <td bgcolor="1f0236f3c9506d4acb9a1c3061ac7f6e570ef0d8Pass7"><a href='1f0236f3c9506d4acb9a1c3061ac7f6e570ef0d8Link7'>1f0236f3c9506d4acb9a1c3061ac7f6e570ef0d8Text7</td>
   <td bgcolor="#FF0000"><a href='1f0236f3c9506d4acb9a1c3061ac7f6e570ef0d8/8/index.html'>Failed</td>
- </tr>
- 
-
-            <tr>
-            <th scope='col'><div align='center'>Commit ID</div></th>
-            <th scope='col'><div align='center'>Description</div></th>
-
-  <th scope='col'><div align='center'>Build_Test</div></th>
-  <th scope='col'><div align='center'>Execution_Test</div></th>
-  <th scope='col'><div align='center'>10e</div></th>
-  <th scope='col'><div align='center'>100e</div></th>
-  <th scope='col'><div align='center'>500e</div></th>
-  <th scope='col'><div align='center'>200mu</div></th>
-  <th scope='col'><div align='center'>800mu</div></th>
-  <th scope='col'><div align='center'>100pi</div></th>
- </tr> 
- <tr>
- <td>199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15</td>
- <td> Merge pull request #293 from JostMigenda/py3 Fix missing events when using kin_converter.py & upgrade to support Python 3.x </td>
-  <td bgcolor="#00FF00"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/log1'>25.51</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/2/index.html'>Failed</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/3/index.html'>Failed</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/4/index.html'>Failed</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/5/index.html'>Failed</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/6/index.html'>Failed</td>
-  <td bgcolor="199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15Pass7"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15Link7'>199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15Text7</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/8/index.html'>Failed</td>
  </tr>
  
 
