--- a/results.html
+++ b/results.html
@@ -17,7 +17,7 @@
  <td> Removes docker entry point </td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/log1'>42.76</td>
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/2/index.html'>Failed</td>
-  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass3"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink3'>0c307c0beea2f3649615cf98d92f76882a7985dcText3</td>
+  <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/3/index.html'>Failed</td>
   <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass4"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink4'>0c307c0beea2f3649615cf98d92f76882a7985dcText4</td>
   <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass5"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink5'>0c307c0beea2f3649615cf98d92f76882a7985dcText5</td>
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/6/index.html'>Failed</td>
