--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  <td> Removes docker entry point </td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/log1'>45.52</td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/2/index.html'>31.24</td>
-  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass3"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink3'>0c307c0beea2f3649615cf98d92f76882a7985dcText3</td>
+  <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/3/index.html'>Failed</td>
   <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass4"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink4'>0c307c0beea2f3649615cf98d92f76882a7985dcText4</td>
   <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass5"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink5'>0c307c0beea2f3649615cf98d92f76882a7985dcText5</td>
   <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass6"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink6'>0c307c0beea2f3649615cf98d92f76882a7985dcText6</td>
