--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/3/index.html'>Failed</td>
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/4/index.html'>Failed</td>
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/5/index.html'>Failed</td>
-  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass6"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink6'>0c307c0beea2f3649615cf98d92f76882a7985dcText6</td>
+  <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/6/index.html'>739.50</td>
   <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass7"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink7'>0c307c0beea2f3649615cf98d92f76882a7985dcText7</td>
   <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass8"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink8'>0c307c0beea2f3649615cf98d92f76882a7985dcText8</td>
  </tr>
