--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/4/index.html'>Failed</td>
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/5/index.html'>Failed</td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/6/index.html'>739.50</td>
-  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass7"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink7'>0c307c0beea2f3649615cf98d92f76882a7985dcText7</td>
+  <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/7/index.html'>794.77</td>
   <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass8"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink8'>0c307c0beea2f3649615cf98d92f76882a7985dcText8</td>
  </tr>
  
@@ -59,7 +59,7 @@
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/4/index.html'>Failed</td>
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/5/index.html'>Failed</td>
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/6/index.html'>Failed</td>
-  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass7"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink7'>0c307c0beea2f3649615cf98d92f76882a7985dcText7</td>
+  <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/7/index.html'>794.77</td>
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/8/index.html'>Failed</td>
  </tr>
  
