--- a/index.html
+++ b/index.html
@@ -26,6 +26,33 @@
  <tr>
  <td>0c307c0beea2f3649615cf98d92f76882a7985dc</td>
  <td> Removes docker entry point </td>
+  <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/log1'>45.32</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass2"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink2'>0c307c0beea2f3649615cf98d92f76882a7985dcText2</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass3"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink3'>0c307c0beea2f3649615cf98d92f76882a7985dcText3</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass4"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink4'>0c307c0beea2f3649615cf98d92f76882a7985dcText4</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass5"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink5'>0c307c0beea2f3649615cf98d92f76882a7985dcText5</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass6"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink6'>0c307c0beea2f3649615cf98d92f76882a7985dcText6</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass7"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink7'>0c307c0beea2f3649615cf98d92f76882a7985dcText7</td>
+  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass8"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink8'>0c307c0beea2f3649615cf98d92f76882a7985dcText8</td>
+ </tr>
+ 
+
+            <tr>
+            <th scope='col'><div align='center'>Commit ID</div></th>
+            <th scope='col'><div align='center'>Description</div></th>
+
+  <th scope='col'><div align='center'>Build_Test</div></th>
+  <th scope='col'><div align='center'>Execution_Test</div></th>
+  <th scope='col'><div align='center'>10e</div></th>
+  <th scope='col'><div align='center'>100e</div></th>
+  <th scope='col'><div align='center'>500e</div></th>
+  <th scope='col'><div align='center'>200mu</div></th>
+  <th scope='col'><div align='center'>800mu</div></th>
+  <th scope='col'><div align='center'>100pi</div></th>
+ </tr>
+ <tr>
+ <td>0c307c0beea2f3649615cf98d92f76882a7985dc</td>
+ <td> Removes docker entry point </td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/log1'>45.52</td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/2/index.html'>31.24</td>
   <td bgcolor="#FF0000"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/3/index.html'>Failed</td>
@@ -304,33 +331,6 @@
   <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/6/index.html'>Failed</td>
   <td bgcolor="199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15Pass7"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15Link7'>199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15Text7</td>
   <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/8/index.html'>Failed</td>
- </tr>
- 
-
-            <tr>
-            <th scope='col'><div align='center'>Commit ID</div></th>
-            <th scope='col'><div align='center'>Description</div></th>
-
-  <th scope='col'><div align='center'>Build_Test</div></th>
-  <th scope='col'><div align='center'>Execution_Test</div></th>
-  <th scope='col'><div align='center'>10e</div></th>
-  <th scope='col'><div align='center'>100e</div></th>
-  <th scope='col'><div align='center'>500e</div></th>
-  <th scope='col'><div align='center'>200mu</div></th>
-  <th scope='col'><div align='center'>800mu</div></th>
-  <th scope='col'><div align='center'>100pi</div></th>
- </tr> 
- <tr>
- <td>32ad84f8305d237b5a02b02b83d95b691079a313</td>
- <td> Pull Request # 294 </td>
-  <td bgcolor="#FF0000"><a href='32ad84f8305d237b5a02b02b83d95b691079a313/log1'>5.38</td>
-  <td bgcolor="32ad84f8305d237b5a02b02b83d95b691079a313Pass2"><a href='32ad84f8305d237b5a02b02b83d95b691079a313Link2'>32ad84f8305d237b5a02b02b83d95b691079a313Text2</td>
-  <td bgcolor="32ad84f8305d237b5a02b02b83d95b691079a313Pass3"><a href='32ad84f8305d237b5a02b02b83d95b691079a313Link3'>32ad84f8305d237b5a02b02b83d95b691079a313Text3</td>
-  <td bgcolor="32ad84f8305d237b5a02b02b83d95b691079a313Pass4"><a href='32ad84f8305d237b5a02b02b83d95b691079a313Link4'>32ad84f8305d237b5a02b02b83d95b691079a313Text4</td>
-  <td bgcolor="32ad84f8305d237b5a02b02b83d95b691079a313Pass5"><a href='32ad84f8305d237b5a02b02b83d95b691079a313Link5'>32ad84f8305d237b5a02b02b83d95b691079a313Text5</td>
-  <td bgcolor="32ad84f8305d237b5a02b02b83d95b691079a313Pass6"><a href='32ad84f8305d237b5a02b02b83d95b691079a313Link6'>32ad84f8305d237b5a02b02b83d95b691079a313Text6</td>
-  <td bgcolor="32ad84f8305d237b5a02b02b83d95b691079a313Pass7"><a href='32ad84f8305d237b5a02b02b83d95b691079a313Link7'>32ad84f8305d237b5a02b02b83d95b691079a313Text7</td>
-  <td bgcolor="32ad84f8305d237b5a02b02b83d95b691079a313Pass8"><a href='32ad84f8305d237b5a02b02b83d95b691079a313Link8'>32ad84f8305d237b5a02b02b83d95b691079a313Text8</td>
  </tr>
  
 
