--- a/results.html
+++ b/results.html
@@ -17,7 +17,7 @@
  <td> Removes docker entry point </td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/log1'>45.32</td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/2/index.html'>30.48</td>
-  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass3"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink3'>0c307c0beea2f3649615cf98d92f76882a7985dcText3</td>
+  <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/3/index.html'>876.28</td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/4/index.html'>698.60</td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/5/index.html'>782.24</td>
   <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass6"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink6'>0c307c0beea2f3649615cf98d92f76882a7985dcText6</td>
