--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/5/index.html'>782.24</td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/6/index.html'>751.52</td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/7/index.html'>1033.03</td>
-  <td bgcolor="0c307c0beea2f3649615cf98d92f76882a7985dcPass8"><a href='0c307c0beea2f3649615cf98d92f76882a7985dcLink8'>0c307c0beea2f3649615cf98d92f76882a7985dcText8</td>
+  <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/8/index.html'>1054.47</td>
  </tr>
  
 
