--- a/index.html
+++ b/index.html
@@ -24,6 +24,33 @@
   <th scope='col'><div align='center'>100pi</div></th>
  </tr>
  <tr>
+ <td>8a1a3f854dda0f8acf63f923c538031925ddb766</td>
+ <td> Removes docker entry point </td>
+  <td bgcolor="#00FF00"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766/log1'>42.43</td>
+  <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass2"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link2'>8a1a3f854dda0f8acf63f923c538031925ddb766Text2</td>
+  <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass3"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link3'>8a1a3f854dda0f8acf63f923c538031925ddb766Text3</td>
+  <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass4"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link4'>8a1a3f854dda0f8acf63f923c538031925ddb766Text4</td>
+  <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass5"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link5'>8a1a3f854dda0f8acf63f923c538031925ddb766Text5</td>
+  <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass6"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link6'>8a1a3f854dda0f8acf63f923c538031925ddb766Text6</td>
+  <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass7"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link7'>8a1a3f854dda0f8acf63f923c538031925ddb766Text7</td>
+  <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass8"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link8'>8a1a3f854dda0f8acf63f923c538031925ddb766Text8</td>
+ </tr>
+ 
+
+            <tr>
+            <th scope='col'><div align='center'>Commit ID</div></th>
+            <th scope='col'><div align='center'>Description</div></th>
+
+  <th scope='col'><div align='center'>Build_Test</div></th>
+  <th scope='col'><div align='center'>Execution_Test</div></th>
+  <th scope='col'><div align='center'>10e</div></th>
+  <th scope='col'><div align='center'>100e</div></th>
+  <th scope='col'><div align='center'>500e</div></th>
+  <th scope='col'><div align='center'>200mu</div></th>
+  <th scope='col'><div align='center'>800mu</div></th>
+  <th scope='col'><div align='center'>100pi</div></th>
+ </tr>
+ <tr>
  <td>0c307c0beea2f3649615cf98d92f76882a7985dc</td>
  <td> Removes docker entry point </td>
   <td bgcolor="#00FF00"><a href='0c307c0beea2f3649615cf98d92f76882a7985dc/log1'>45.32</td>
@@ -304,33 +331,6 @@
   <td bgcolor="#FF0000"><a href='556c06ba0401e8d314fa735199fd315dc4f1da2a/6/index.html'>Failed</td>
   <td bgcolor="556c06ba0401e8d314fa735199fd315dc4f1da2aPass7"><a href='556c06ba0401e8d314fa735199fd315dc4f1da2aLink7'>556c06ba0401e8d314fa735199fd315dc4f1da2aText7</td>
   <td bgcolor="#FF0000"><a href='556c06ba0401e8d314fa735199fd315dc4f1da2a/8/index.html'>Failed</td>
- </tr>
- 
-
-            <tr>
-            <th scope='col'><div align='center'>Commit ID</div></th>
-            <th scope='col'><div align='center'>Description</div></th>
-
-  <th scope='col'><div align='center'>Build_Test</div></th>
-  <th scope='col'><div align='center'>Execution_Test</div></th>
-  <th scope='col'><div align='center'>10e</div></th>
-  <th scope='col'><div align='center'>100e</div></th>
-  <th scope='col'><div align='center'>500e</div></th>
-  <th scope='col'><div align='center'>200mu</div></th>
-  <th scope='col'><div align='center'>800mu</div></th>
-  <th scope='col'><div align='center'>100pi</div></th>
- </tr> 
- <tr>
- <td>199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15</td>
- <td> Merge pull request #293 from JostMigenda/py3 Fix missing events when using kin_converter.py & upgrade to support Python 3.x </td>
-  <td bgcolor="#00FF00"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/log1'>27.40</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/2/index.html'>Failed</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/3/index.html'>Failed</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/4/index.html'>Failed</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/5/index.html'>Failed</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/6/index.html'>Failed</td>
-  <td bgcolor="199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15Pass7"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15Link7'>199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15Text7</td>
-  <td bgcolor="#FF0000"><a href='199cbe6ad1858ae1f4db3fb2fd8d5fd65d705d15/8/index.html'>Failed</td>
  </tr>
  
 
