--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  <td> Removes docker entry point </td>
   <td bgcolor="#00FF00"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766/log1'>42.43</td>
   <td bgcolor="#00FF00"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766/2/index.html'>31.60</td>
-  <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass3"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link3'>8a1a3f854dda0f8acf63f923c538031925ddb766Text3</td>
+  <td bgcolor="#00FF00"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766/3/index.html'>1391.69</td>
   <td bgcolor="#00FF00"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766/4/index.html'>1108.59</td>
   <td bgcolor="#00FF00"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766/5/index.html'>817.80</td>
   <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass6"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link6'>8a1a3f854dda0f8acf63f923c538031925ddb766Text6</td>
