--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <td bgcolor="#00FF00"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766/3/index.html'>1391.69</td>
   <td bgcolor="#00FF00"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766/4/index.html'>1108.59</td>
   <td bgcolor="#00FF00"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766/5/index.html'>817.80</td>
-  <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass6"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link6'>8a1a3f854dda0f8acf63f923c538031925ddb766Text6</td>
+  <td bgcolor="#00FF00"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766/6/index.html'>932.16</td>
   <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass7"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link7'>8a1a3f854dda0f8acf63f923c538031925ddb766Text7</td>
   <td bgcolor="8a1a3f854dda0f8acf63f923c538031925ddb766Pass8"><a href='8a1a3f854dda0f8acf63f923c538031925ddb766Link8'>8a1a3f854dda0f8acf63f923c538031925ddb766Text8</td>
  </tr>
